--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/winston": "2.2.0",
     "browserify": "13.3.0",
     "chai": "3.5.0",
+    "json-loader": "^0.5.4",
     "mocha": "3.2.0",
     "typescript": "2.1.4",
     "typescript-formatter": "4.0.1",
