--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chai": "3.5.0",
     "json-loader": "^0.5.4",
     "mocha": "3.2.0",
+    "shebang-loader": "0.0.1",
     "typescript": "2.1.4",
     "typescript-formatter": "4.0.1",
     "uglifyjs": "^2.4.10",
