--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "./node_modules/.bin/tsfmt -r *.ts",
     "test": "./node_modules/.bin/mocha tests --watch",
     "tscompile": "./node_modules/.bin/tsc",
-    "bundlejs": "./node_modules/.bin/browserify --no-builtins --bare --no-bf --node --dg true index.js -o ./build/faf-ice-adapter.js"
+    "bundle": "webpack",
+    "bundle2": "browserify --node index.js -o dist/test.js"
   },
   "keywords": [
     "Supreme Commander",
@@ -23,6 +24,9 @@
   "bin": {
     "faf-ice-adapter": "./index.js"
   },
+  "browser": {
+    "wrtc": false
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/faforever/ice-adapter"
@@ -35,10 +39,12 @@
   ],
   "dependencies": {
     "jayson": "2.0.2",
-    "optimist": "0.6.1",
+    "noderify": "^2.0.0",
+    "ts-loader": "^2.0.0",
+    "twilio": "2.11.1",
     "winston": "2.3.0",
     "wrtc": "0.0.61",
-    "twilio": "2.11.1"
+    "yargs": "^6.6.0"
   },
   "devDependencies": {
     "@types/node": "7.0.0",
