--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "typescript": "2.1.4",
     "typescript-formatter": "4.0.1",
     "uglifyjs": "^2.4.10",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-node-externals": "^1.5.4"
   },
   "preferGlobal": true,
   "private": true
