--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ts-loader": "^2.0.0",
     "twilio": "2.11.1",
     "winston": "2.3.0",
-    "wrtc": "0.0.61",
+    "wrtc": "^0.0.61",
     "yargs": "^6.6.0"
   },
   "devDependencies": {
@@ -53,11 +53,13 @@
     "chai": "3.5.0",
     "json-loader": "^0.5.4",
     "mocha": "3.2.0",
+    "node-loader": "^0.6.0",
     "shebang-loader": "0.0.1",
     "typescript": "2.1.4",
     "typescript-formatter": "4.0.1",
     "uglifyjs": "^2.4.10",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-node-externals": "^1.5.4"
   },
   "preferGlobal": true,
   "private": true
